2002-01-28  Laurent Pautet  <pautet@arlequin.enst.fr>

	* Makefile.am, Makefile.in: Add -bargs -static to fix 9728-002.

2002-01-25  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_sysdep-nt.adb: Add a pragma Unreferenced to an unused
	procedure parameter in the NT version of XE_Sysdep.

2002-01-13  Pascal Obry  <p.obry@wanadoo.fr>

	* Makefile.in, Makefile.am:
	(gnatdist): Handle -largs with LIBS make variable.
	Needed to build GLADE on Windows with GNAT 5 (8603-003).

2002-01-04  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_parse.adb, xe_parse.ads: Remove unused subprograms
	Search_Variable (9704-003).

	* xe_stubs.adb : Remove usued subprograms SGP_Initialize
	(9704-003).

2001-08-20  Pascal Obry  <obry@gnat.com>

        * xe_utils.adb:
       (Dir_Sep): renaming for GNAT.OS_Lib.Directory_Separator. 
       Use Dir_Sep instead of Directory_Separator to avoid ambiguity.
       Continued work for 8928-003.

2001-07-11  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_stubs.adb: Split storage_dir string into substrings to fix
	9109-011.

	* xe_utils.adb, xe_utils.adb: Split strings into substrings to
	compile with -gnatg.

2001-06-05  Pascal Obry  <obry@gnat.com>

	* xe_reg.adb: Check for GCC_ROOT environment variable before
	looking in the registry. Fix 9004-005.
	
2001-05-30  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe.ads, xe.adb, xe_stubs.adb, xe_back.adb, xe_back.ads,
	xe_stdcnf.adb: Add pragma Priority_Policy to choose between
	CLient_Propagated and Server_Decalred priority policy. Add
	partition attribute priority to set anonymous tasks priority.

	* all: Update copyright.
	
2001-02-08  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe.ads, xe_back.adb, xe_back.ads, xe_lead.adb, xe_stubs.adb: Add
	pragma Remote_Shell to configure the remote shell command and
	options to use when we launch a remote partition. Fix 8607-013.

2001-01-26  Laurent Pautet  <pautet@arlequin.enst.fr>

	* xe_lead.adb: Do not embrace executable name with quotes. It